<resources>
    <string name="app_name">Индекс массы тела</string>
    <string name="growthTextView">Рост, см</string>
    <string name="growthEditText">Рост, см</string>
    <string name="weightTextView">Вес, кг</string>
    <string name="weightEditText">Вес, кг</string>
    <string name="calculationButton">Р а с ч и т а т ь</string>
    <string name="clearButton">О ч и с т и т ь</string>
    <string name="underWeight">Ниже нормального веса</string>
    <string name="normalWeight">Нормальный вес</string>
    <string name="preObesity">Избыточный вес</string>
    <string name="obesityClass1">Ожирение | степени</string>
    <string name="obesityClass2">Ожирение || степени</string>
    <string name="obesityClass3">Ожирение ||| степени</string>
    <string name="enterGrowth">Введите свой рост в см.</string>
    <string name="enterWeight">Введите свой вес в кг.</string>
    <string name="action_info">Информация</string>
    <string name="action_more">Другое</string>
    <string name="action_history">История</string>
    <string name="action_share">Поделиться приложением</string>
    <string name="description">Описание</string>
    <string name="good">Х о р о ш о</string>
    <string name="description_BMI">Индекс массы тела — величина, позволяющая оценить степень соответствия массы человека и его роста и тем самым косвенно судить о том, является ли масса недостаточной, нормальной или избыточной.</string>
    <string name="zoneUnderWeight">&#60; 18.5</string>
    <string name="zoneObesityClass3">&#62; 40</string>
    <string name="measurementResults">Результаты измерения</string>
    <string name="aboutUs">О нас</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutUsDescriotion">Привет, меня зовут Алексей. Занимаюсь созданием приложений для
        здоровья и развития. Санимаюсь спортом, путешествую и ...(все остальное instagram)</string>
    <string name="action_aboutUs">О нас</string>
</resources>