<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:title="@string/action_info"
        app:showAsAction="ifRoom" />
      <item android:id="@+id/action_share"
         android:title="@string/action_share"
         app:showAsAction="ifRoom"
         app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_history"
        android:title="@string/action_history"
        app:showAsAction="never" />
    <item android:id="@+id/action_more"
        android:title="@string/action_more"
        app:showAsAction="never" />
</menu>