<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_margin="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge">
    </TextView>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/description_BMI"
        android:textAppearance="?android:attr/textAppearanceMedium">
    </TextView>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:layout_gravity="center"
        android:background="@drawable/custom_layout"
        >
        <TextView
            android:text="">
        </TextView>
        <TextView
            android:text="ИМТ"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="Состояние организма"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="       "
            android:background="@drawable/custom_layout"
            android:layout_gravity="center"
            >
        </TextView>
        <TextView
            android:text="@string/obesityClass3"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="@string/zoneObesityClass3"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="       "
            android:background="#E91E63">
        </TextView>
        <TextView
            android:text="@string/obesityClass2"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="35-40"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="       "
            android:background="#9C27B0">
        </TextView>
        <TextView
            android:text="@string/obesityClass1"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="30-35"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="       "
            android:background="#673AB7">
        </TextView>
        <TextView
            android:text="@string/preObesity"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="25-30"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="       "
            android:background="#4CAF50">
        </TextView>
        <TextView
            android:text="@string/normalWeight"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="18.5-25"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="       "
            android:background="#00BCD4">
        </TextView>
        <TextView
            android:text="@string/underWeight"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:text="@string/zoneUnderWeight"
            android:layout_gravity="center">
        </TextView>
    </GridLayout>
    <Button
        android:id="@+id/btnMaybe"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_gravity="right"
        android:text="@string/good"
        android:background="@drawable/button_main"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#FFFF"
        android:textScaleX="0.7">
    </Button>
</LinearLayout>