<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/growthTextView">

        </TextView>

        <EditText
            android:id="@+id/growthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/growthEditText"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:singleLine="true"
            android:backgroundTint="@color/colorPrimary">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/weightTextView">

        </TextView>

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weightEditText"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:lines="1"
            android:maxLength="3"
            android:inputType="number"
            android:backgroundTint="@color/colorPrimary">

        </EditText>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right">

    <Button
        android:id="@+id/calculationButton"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_main"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClickFindBMI"
        android:text="@string/calculationButton"
        android:textColor="#FFFF"
        android:textScaleX="0.7"
        android:textStyle="bold"></Button>

    <Button
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:onClick="onClickClear"
        android:text="@string/clearButton"
        android:textStyle="bold"
        android:textScaleX="0.7">

    </Button>

</LinearLayout>

    <TextView
        android:id="@+id/outputDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="20dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal">
    </TextView>



</LinearLayout>